# Consumer-Intelligence-Protocol-Automotive

./: .gitignore  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  TRADEMARKS.md  pyproject.toml
auto_mcp/: __init__.py  config.py  constants.py  normalization.py  server.py
auto_mcp/clients/: __init__.py  autodev.py  nhtsa.py
auto_mcp/data/: inventory.py  journey.py  seed.py  store.py
auto_mcp/escalation/: detector.py  store.py
auto_mcp/ingestion/: pipeline.py
auto_mcp/scaffolds/: autodev_data.yaml  availability_check.yaml  availability_check_dealer.yaml  financing_overview.yaml  financing_scenarios.yaml  funnel_metrics.yaml  general_advice.yaml  insurance_estimate.yaml  inventory_aging_report.yaml  inventory_stats.yaml  lead_analytics.yaml  lead_detail.yaml  lead_escalation.yaml  lead_hotlist.yaml  location_search.yaml  market_price_context.yaml  market_price_context_dealer.yaml  nhtsa_safety.yaml  orchestration_entry.yaml  out_the_door_price.yaml  ownership_cost.yaml  pricing_opportunities.yaml  purchase_readiness.yaml  similar_vehicles.yaml  test_drive_schedule.yaml  trade_in_estimate.yaml  vehicle_details.yaml  (+8 more)
benchmarks/: hot_paths.py
docs/: architecture-map.html
scripts/: check_cip_delegation.py
tests/: conftest.py  test_autodev.py  test_dealer_intelligence_server.py  test_dealer_intelligence_tools.py  test_escalation.py  test_funnel_server.py  test_funnel_tools.py  test_ingestion_pipeline.py  test_nhtsa.py  test_orchestration_resources.py  test_orchestration_signatures.py  test_scaffolds.py  test_server.py  test_store.py  test_tools.py
(+23 files in other folders)
