[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-mcp"
version = "0.2.0"
description = "AutoCIP — Vehicle shopping assistant MCP server built on CIP"
requires-python = ">=3.11"
license = "BUSL-1.1"
dependencies = [
    "cip-protocol[full] @ git+https://github.com/Cole-Cant-Code/CIP-Customer-Intelligence-Protocol.git@v0.3.0",
    "mcp[cli]>=1.26.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
